--- a/src/app/core/pages/page-login/page-login.component.html
+++ b/src/app/core/pages/page-login/page-login.component.html
@@ -1,7 +1,7 @@
 <div fxLayout fxLayout.lt-sm="column" class="container" fxLayoutAlign="space-between">
     <div class="informacion" fxFlex="1 1 30%" fxLayout="column" fxLayoutAlign="center center">
         <mat-icon svgIcon="logo"> </mat-icon>
-        <h2>Sistema de Gestión de Televisión Prepagada</h2>
+        <h2>DAS TELEVISIÓN</h2>
     </div>
     <div class="login" fxFlex="1 1 30%" fxLayout fxLayoutAlign="center center">
         <gst-login></gst-login>
