--- a/src/app/core/components/login/login.component.html
+++ b/src/app/core/components/login/login.component.html
@@ -1,5 +1,5 @@
 <form fxLayout="column" [formGroup]="group">
-    <h2>Credenciales</h2>
+    <h2>Ingresa tus datos</h2>
     <mat-form-field>
         <mat-label>Correo</mat-label>
         <input
